Saved all files after executing an experiment with different bootstrap sizes

--- a/notebooks/diff_bootstrap_sizes_exp/Baseline_acs_income/50/ACS_Income_Batch1.ipynb
+++ b/notebooks/diff_bootstrap_sizes_exp/Baseline_acs_income/50/ACS_Income_Batch1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe028f2f",
+   "id": "dfbd51e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4ef3351a",
+   "id": "c36ae2f4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T14:27:52.726614Z",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0b4fb6df",
+   "id": "209fec4e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T14:28:01.243911Z",
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0a6301d4",
+   "id": "2b6fa200",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:06:37.857077Z",
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "686af06b",
+   "id": "50592a67",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:06:42.911721Z",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fc60ab43",
+   "id": "37d35329",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:06:43.391627Z",
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d9f1b16",
+   "id": "0a1880eb",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2f9c4357",
+   "id": "29d19f02",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:06:49.735350Z",
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "827586e5",
+   "id": "328ba767",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "85ca11c5",
+   "id": "7396aa9a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:06:50.723358Z",
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9eb10b2c",
+   "id": "268d06da",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6a8afa0f",
+   "id": "62d373c6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:06:52.451405Z",
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b3a3365e",
+   "id": "250c2e7f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:06:53.005423Z",
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "afe84279",
+   "id": "c64c706f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:06:53.757610Z",
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5709485c",
+   "id": "422b7591",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "94269b1c",
+   "id": "c135023a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:07:01.822930Z",
@@ -408,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "887038c4",
+   "id": "86ff8d50",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:07:01.920504Z",
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f19228f",
+   "id": "071ae79b",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbec0c61",
+   "id": "24b5a874",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c7d827dd",
+   "id": "3a2bcce8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:07:02.518662Z",
@@ -470,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "671a1b59",
+   "id": "5cdd21cc",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:07:02.757844Z",
@@ -491,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "d90acabb",
+   "id": "8b4397cd",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:08:11.330537Z",
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9025594",
+   "id": "4f3edf10",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -630,8 +630,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cb528056",
+   "execution_count": 11,
+   "id": "f2bd69e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,10 +651,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e27d6acc",
+   "execution_count": 12,
+   "id": "d00c5943",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-02-24 11:12:37 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "INFO:root:Start an experiment iteration for the following custom params:\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'dataset_split_seed': 200,\n",
+      " 'experiment_iteration': 'Exp_iter_2',\n",
+      " 'fair_intervention_params_lst': '[0.0]',\n",
+      " 'model_init_seed': 200,\n",
+      " 'session_uuid': 'f12c5c59-e58a-4f5a-bc5b-e33f81189fd7'}\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "12ad738eb2eb488e9c0d1075f5288442",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Multiple alphas:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-02-24 11:12:38 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "INFO:root:The dataset is preprocessed\n",
+      "2024-02-24 11:12:38 experiment_interface.py INFO    : Models config is loaded from the input file\n",
+      "INFO:root:Models config is loaded from the input file\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intervention_param:  0.0\n",
+      "Skip preprocessing\n",
+      "cur_base_flow_dataset.X_train_val.columns:  Index(['cat__SCHL_1', 'cat__SCHL_10', 'cat__SCHL_11', 'cat__SCHL_12',\n",
+      "       'cat__SCHL_13', 'cat__SCHL_14', 'cat__SCHL_15', 'cat__SCHL_16',\n",
+      "       'cat__SCHL_17', 'cat__SCHL_18',\n",
+      "       ...\n",
+      "       'cat__RELP_2', 'cat__RELP_3', 'cat__RELP_4', 'cat__RELP_5',\n",
+      "       'cat__RELP_6', 'cat__RELP_7', 'cat__RELP_8', 'cat__RELP_9', 'num__AGEP',\n",
+      "       'num__WKHP'],\n",
+      "      dtype='object', length=716)\n",
+      "Top indexes of an X_test in the current base flow dataset:  Int64Index([ 6043,  3745,  5159,  7241,  7820,  3695, 11501, 11432,  1163,\n",
+      "             8994,  7972,  2554,  9884,  2008,  6884, 11995,  5200,  4649,\n",
+      "            10244, 13775],\n",
+      "           dtype='int64')\n",
+      "Top indexes of an y_test in the current base flow dataset:  Int64Index([ 6043,  3745,  5159,  7241,  7820,  3695, 11501, 11432,  1163,\n",
+      "             8994,  7972,  2554,  9884,  2008,  6884, 11995,  5200,  4649,\n",
+      "            10244, 13775],\n",
+      "           dtype='int64')\n",
+      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_bootstrap_sizes_exp/Baseline_acs_income/50/tuning_results_Folktables_CA_2018_Income_alpha_0.0_20240224__154709.csv\n",
+      "RandomForestClassifier:  {'bootstrap': True, 'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': 50, 'max_features': 'sqrt', 'max_leaf_nodes': None, 'max_samples': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 10, 'min_weight_fraction_leaf': 0.0, 'n_estimators': 500, 'n_jobs': None, 'oob_score': False, 'random_state': 200, 'verbose': 0, 'warm_start': False}\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e8546084c1e64b1ca49bf63112a528c6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Analyze multiple models:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9dfb4044ee734ace8212161870147eab",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Classifiers testing by bootstrap:   0%|          | 0/50 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "run_exp_iter_with_disparate_impact(data_loader=exp_iter_data_loader,\n",
     "                                   experiment_seed=experiment_seed,\n",
@@ -674,7 +774,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42400d5c",
+   "id": "9a0f4209",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -682,8 +782,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "306ab1ab",
+   "execution_count": 13,
+   "id": "be2581fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,10 +803,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e8021583",
+   "execution_count": 14,
+   "id": "f77f6d35",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-02-24 11:22:05 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "INFO:root:Start an experiment iteration for the following custom params:\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'dataset_split_seed': 300,\n",
+      " 'experiment_iteration': 'Exp_iter_3',\n",
+      " 'fair_intervention_params_lst': '[0.0]',\n",
+      " 'intervention_param': 0.0,\n",
+      " 'model_init_seed': 300,\n",
+      " 'run_start_date_time': datetime.datetime(2024, 2, 24, 16, 12, 38, 307435, tzinfo=datetime.timezone.utc),\n",
+      " 'session_uuid': 'f12c5c59-e58a-4f5a-bc5b-e33f81189fd7'}\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "26de104cd6374a7ca71a86cec122b98c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Multiple alphas:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-02-24 11:22:06 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "INFO:root:The dataset is preprocessed\n",
+      "2024-02-24 11:22:06 experiment_interface.py INFO    : Models config is loaded from the input file\n",
+      "INFO:root:Models config is loaded from the input file\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intervention_param:  0.0\n",
+      "Skip preprocessing\n",
+      "cur_base_flow_dataset.X_train_val.columns:  Index(['cat__SCHL_1', 'cat__SCHL_10', 'cat__SCHL_11', 'cat__SCHL_12',\n",
+      "       'cat__SCHL_13', 'cat__SCHL_14', 'cat__SCHL_15', 'cat__SCHL_16',\n",
+      "       'cat__SCHL_17', 'cat__SCHL_18',\n",
+      "       ...\n",
+      "       'cat__RELP_2', 'cat__RELP_3', 'cat__RELP_4', 'cat__RELP_5',\n",
+      "       'cat__RELP_6', 'cat__RELP_7', 'cat__RELP_8', 'cat__RELP_9', 'num__AGEP',\n",
+      "       'num__WKHP'],\n",
+      "      dtype='object', length=722)\n",
+      "Top indexes of an X_test in the current base flow dataset:  Int64Index([ 4329,   723,  8157,  8934,  5880,  1877,  9980,  9115, 13634,\n",
+      "            12168,  6957,  9083, 14260,  5349,  7879,  3078, 10032, 13643,\n",
+      "            12025,  7489],\n",
+      "           dtype='int64')\n",
+      "Top indexes of an y_test in the current base flow dataset:  Int64Index([ 4329,   723,  8157,  8934,  5880,  1877,  9980,  9115, 13634,\n",
+      "            12168,  6957,  9083, 14260,  5349,  7879,  3078, 10032, 13643,\n",
+      "            12025,  7489],\n",
+      "           dtype='int64')\n",
+      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_bootstrap_sizes_exp/Baseline_acs_income/50/tuning_results_Folktables_CA_2018_Income_alpha_0.0_20240224__154709.csv\n",
+      "RandomForestClassifier:  {'bootstrap': True, 'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': 50, 'max_features': 'sqrt', 'max_leaf_nodes': None, 'max_samples': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 10, 'min_weight_fraction_leaf': 0.0, 'n_estimators': 500, 'n_jobs': None, 'oob_score': False, 'random_state': 300, 'verbose': 0, 'warm_start': False}\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "465ced7654864bee85efc88a0895e236",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Analyze multiple models:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ee4c2dd21ef944bdb0e1232085d92090",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Classifiers testing by bootstrap:   0%|          | 0/50 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "run_exp_iter_with_disparate_impact(data_loader=exp_iter_data_loader,\n",
     "                                   experiment_seed=experiment_seed,\n",
@@ -726,7 +928,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6460d73",
+   "id": "7836b9c0",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -735,7 +937,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0bb880a",
+   "id": "d7facba8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,7 +958,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82ee2239",
+   "id": "0291c0b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,7 +980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6346ea8",
+   "id": "5fa6b8da",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -787,7 +989,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52355923",
+   "id": "58c8382b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,7 +1010,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93ee1845",
+   "id": "dc36dee1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,7 +1032,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d996bb6",
+   "id": "f31cc0d1",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -839,7 +1041,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76f16904",
+   "id": "5dab2b31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,7 +1062,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09158cbb",
+   "id": "7259f459",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,7 +1085,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "624ee2d5",
+   "id": "5d342904",
    "metadata": {},
    "outputs": [],
    "source": []
