--- a/notebooks/diff_bootstrap_sizes_exp/Baseline_student_performance_por/150/Student_Performance_Por_Batch1.ipynb
+++ b/notebooks/diff_bootstrap_sizes_exp/Baseline_student_performance_por/150/Student_Performance_Por_Batch1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e347864",
+   "id": "87e65e87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39f5a913",
+   "id": "8e632681",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ac1aae9",
+   "id": "b78ab1b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3c87cf39",
+   "id": "2f5d42ea",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:17:12.430078Z",
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e0b37c0b",
+   "id": "3b406fb5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:17:12.439514Z",
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "13fc9175",
+   "id": "fc2c394d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:17:12.452475Z",
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14a33a0b",
+   "id": "a34e2f36",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0422a5df",
+   "id": "e5223e71",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:17:19.033126Z",
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0b1602c",
+   "id": "5dcb5c2a",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "202c89bc",
+   "id": "df066ef8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:17:19.075462Z",
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc90beef",
+   "id": "4ae18325",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "dac171bd",
+   "id": "251eae93",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:17:19.120585Z",
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8df26b66",
+   "id": "d51160f7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:17:19.486159Z",
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b40f04f3",
+   "id": "21b9e7e4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:18:03.343401Z",
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01530ad7",
+   "id": "0b89cc70",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "18fc13ca",
+   "id": "f4ae3aa0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:18:03.758026Z",
@@ -482,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "97fdc6a9",
+   "id": "cf9a606d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:18:03.890439Z",
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "89da8321",
+   "id": "f171958e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:18:06.110146Z",
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "7719e651",
+   "id": "cf39ee0e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:18:06.328984Z",
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fb879cf",
+   "id": "d2a40c04",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc9aaaa9",
+   "id": "10851c01",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -580,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "47c25518",
+   "id": "bdcad6d8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:18:09.996859Z",
@@ -599,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "fcb7f240",
+   "id": "9b710e35",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:18:10.259193Z",
@@ -620,7 +620,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "62b876bc",
+   "id": "4af6df96",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-24T15:18:14.129179Z",
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab133d29",
+   "id": "47435119",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -765,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "d2fde727",
+   "id": "8748662e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,7 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "1a82aac7",
+   "id": "4267dab2",
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "605f9931",
+   "id": "0b671413",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -927,7 +927,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "d30f8def",
+   "id": "f8ea6087",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -948,7 +948,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "c98960f8",
+   "id": "a17d0bc6",
    "metadata": {},
    "outputs": [
     {
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64c2cb19",
+   "id": "71e83c0a",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -1089,7 +1089,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "3a5be419",
+   "id": "a4c9c20a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1110,7 +1110,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "5dc636be",
+   "id": "659f5be5",
    "metadata": {},
    "outputs": [
     {
@@ -1242,7 +1242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a3214f1",
+   "id": "93848490",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -1251,7 +1251,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "bbe8d35c",
+   "id": "a79671d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1271,8 +1271,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5b92ad36",
+   "execution_count": 29,
+   "id": "d68ccfa1",
    "metadata": {},
    "outputs": [
     {
@@ -1404,7 +1404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "416533ef",
+   "id": "c8b1428c",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1412,8 +1412,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "209e8062",
+   "execution_count": 30,
+   "id": "4dda8a06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1433,10 +1433,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2b5725f2",
+   "execution_count": 31,
+   "id": "b6da482c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-02-24 11:03:37 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "INFO:root:Start an experiment iteration for the following custom params:\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'dataset_split_seed': 600,\n",
+      " 'experiment_iteration': 'Exp_iter_6',\n",
+      " 'fair_intervention_params_lst': '[0.0]',\n",
+      " 'intervention_param': 0.0,\n",
+      " 'model_init_seed': 600,\n",
+      " 'run_start_date_time': datetime.datetime(2024, 2, 24, 16, 1, 58, 950296, tzinfo=datetime.timezone.utc),\n",
+      " 'session_uuid': '9bccff31-d5ee-4958-bcd6-9cc7bb335e18'}\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "de2cf4d43104495fb4626ecbf3353c1e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Multiple alphas:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-02-24 11:03:37 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "INFO:root:The dataset is preprocessed\n",
+      "2024-02-24 11:03:37 experiment_interface.py INFO    : Models config is loaded from the input file\n",
+      "INFO:root:Models config is loaded from the input file\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intervention_param:  0.0\n",
+      "Skip preprocessing\n",
+      "cur_base_flow_dataset.X_train_val.columns:  Index(['cat__school_GP', 'cat__school_MS', 'cat__address_R', 'cat__address_U',\n",
+      "       'cat__famsize_GT3', 'cat__famsize_LE3', 'cat__Pstatus_A',\n",
+      "       'cat__Pstatus_T', 'cat__Mjob_at_home', 'cat__Mjob_health',\n",
+      "       'cat__Mjob_other', 'cat__Mjob_services', 'cat__Mjob_teacher',\n",
+      "       'cat__Fjob_at_home', 'cat__Fjob_health', 'cat__Fjob_other',\n",
+      "       'cat__Fjob_services', 'cat__Fjob_teacher', 'cat__reason_course',\n",
+      "       'cat__reason_home', 'cat__reason_other', 'cat__reason_reputation',\n",
+      "       'cat__guardian_father', 'cat__guardian_mother', 'cat__guardian_other',\n",
+      "       'cat__schoolsup_no', 'cat__schoolsup_yes', 'cat__famsup_no',\n",
+      "       'cat__famsup_yes', 'cat__paid_no', 'cat__paid_yes',\n",
+      "       'cat__activities_no', 'cat__activities_yes', 'cat__nursery_no',\n",
+      "       'cat__nursery_yes', 'cat__higher_no', 'cat__higher_yes',\n",
+      "       'cat__internet_no', 'cat__internet_yes', 'cat__romantic_no',\n",
+      "       'cat__romantic_yes', 'num__age', 'num__Medu', 'num__Fedu',\n",
+      "       'num__traveltime', 'num__studytime', 'num__failures', 'num__famrel',\n",
+      "       'num__freetime', 'num__goout', 'num__Dalc', 'num__Walc', 'num__health',\n",
+      "       'num__absences', 'num__G1', 'num__G2'],\n",
+      "      dtype='object')\n",
+      "Top indexes of an X_test in the current base flow dataset:  Int64Index([390, 397, 375, 507, 625, 369, 245, 428, 593, 102,  49, 621,  92,\n",
+      "            158, 505, 612,  29, 452,  56, 145],\n",
+      "           dtype='int64')\n",
+      "Top indexes of an y_test in the current base flow dataset:  Int64Index([390, 397, 375, 507, 625, 369, 245, 428, 593, 102,  49, 621,  92,\n",
+      "            158, 505, 612,  29, 452,  56, 145],\n",
+      "           dtype='int64')\n",
+      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_bootstrap_sizes_exp/Baseline_student_performance_por/50/tuning_results_Student_Performance_Por_alpha_0.0_20240224__153221.csv\n",
+      "RandomForestClassifier:  {'bootstrap': False, 'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': 10, 'max_features': 'sqrt', 'max_leaf_nodes': None, 'max_samples': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 2, 'min_samples_split': 2, 'min_weight_fraction_leaf': 0.0, 'n_estimators': 500, 'n_jobs': None, 'oob_score': False, 'random_state': 600, 'verbose': 0, 'warm_start': False}\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "59053086ad0246aa81222e6358c8f914",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Analyze multiple models:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "61ad49e5ef304a479cc3508352609f42",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Classifiers testing by bootstrap:   0%|          | 0/150 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mWARNING: \"sex_dis_incorrect\" group is empty. Stability metrics are set to None.\u001b[39m\n",
+      "\u001b[33mWARNING: \"sex_dis_incorrect\" group is empty. Error metrics are set to None.\u001b[39m\n"
+     ]
+    }
+   ],
    "source": [
     "run_exp_iter_with_disparate_impact(data_loader=exp_iter_data_loader,\n",
     "                                   experiment_seed=experiment_seed,\n",
@@ -1457,7 +1575,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1865492",
+   "id": "8c78edd9",
    "metadata": {},
    "outputs": [],
    "source": []
